# monimoni

./: .env.example  .gitignore  Makefile  PROGRESS.md  README.md  cookies.txt  docker-compose.yml  login-test.html  plan.md  test.html
api/: Dockerfile  alembic.ini  init.sql  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: b55d03c14c5c_初期テーブル作成.py
api/app/: database.py  main.py  models.py  schemas.py  settings.py
api/app/routers/: __init__.py  accounts.py  auth.py  budgets.py  categories.py  files.py  reports.py  transactions.py  transactions_debug.py  users.py
api/app/scripts/: __init__.py  seed_data.py
backup/: backup.sh
nginx/: default.conf
web/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.tsx  theme.ts
web/src/api/: client.ts
web/src/components/: Layout.tsx
web/src/hooks/: useAuth.ts  useAuth_new.ts
web/src/pages/: Accounts.tsx  Budgets.tsx  Categories.tsx  Dashboard.tsx  Login.tsx  Transactions.tsx
web/src/utils/: formatNumber.ts
